
syntax = "proto3";
package tari.dan.tips.tip002;

// ERC20 copy - Should be renamed to TIP020
service Tip002 {
  rpc Init(InitRequest) returns (Empty);
  //  rpc Info(InfoRequest) returns (InfoResponse);
  rpc BalanceOf(BalanceOfRequest) returns (BalanceOfResponse);
  rpc Transfer(TransferRequest) returns (TransferResponse);
}


message InitRequest {
  string symbol = 1;
  uint32 decimals = 2;
  uint64 total_supply = 3;
}
message Empty{

}

message TransferRequest {
  bytes to = 1;
  uint64 amount = 2;
  bytes from = 3;
  bytes caller = 4;
}

message TransferResponse {
  // TODO? maybe errors?
}

//message InfoRequest {
//
//}
//
//message InfoResponse {
//  string symbol = 1;
//  byte decimals = 2;
//  uint256 total_supply = 3;
//}

message BalanceOfRequest {
  bytes owner = 1;
}

message BalanceOfResponse {
  uint64 balance = 1;
}
